--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>untie.agency</title>
-    <link rel="stylesheet" href="index2.css" />
+    <link rel="stylesheet" href="index.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
@@ -78,7 +78,7 @@
         <!-- nav -->
         <nav>
           <div class="navbar">
-            <a href="index2.html"
+            <a href="index.html"
               ><img
                 src="LOGO/UNTIE_LOGO 2 mas peque.png"
                 alt="UNTIE LOGO"
@@ -102,7 +102,7 @@
             <div id="nav-content">
               <ul>
                 <li class="nav-menu-b">
-                  <a href="index2.html"><p class="justify-text">ABOUT</p></a>
+                  <a href="index.html"><p class="justify-text">ABOUT</p></a>
                 </li>
                 <li class="nav-menu-b">
                   <a href="#"><p class="justify-text">TALENTS</p></a>
@@ -164,6 +164,6 @@
         </div>
       </div>
     </div>
-    <script src="index2.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
