--- a/index.html
+++ b/index.html
@@ -13,74 +13,74 @@
       <div class="carousel-container">
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/01.png)"
+          style="background-image: url(01.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/02.png)"
+          style="background-image: url(02.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/03.png)"
+          style="background-image: url(03.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/04.png)"
+          style="background-image: url(04.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/05.png)"
+          style="background-image: url(05.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/06.png)"
+          style="background-image: url(06.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/07.png)"
+          style="background-image: url(07.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/08.png)"
+          style="background-image: url(08.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/09.png)"
+          style="background-image: url(09.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/10.png)"
+          style="background-image: url(10.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/11.png)"
+          style="background-image: url(11.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/12.png)"
+          style="background-image: url(12.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/13.png)"
+          style="background-image: url(13.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/14.png)"
+          style="background-image: url(14.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/15.png)"
+          style="background-image: url(15.png)"
         ></div>
         <div
           class="image-slide"
-          style="background-image: url(PHOTOS/16.png)"
+          style="background-image: url(16.png)"
         ></div>
         <!-- nav -->
         <nav>
           <div class="navbar">
             <a href="index.html"
               ><img
-                src="LOGO/UNTIE_LOGO 2 mas peque.png"
+                src="UNTIE_LOGO 2 mas peque.png"
                 alt="UNTIE LOGO"
                 class="nav-logo"
             /></a>
