--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             representation, photographer representation, portfolio development,
             promotion and marketing, and contract negotiation. The marketing
             agency representing talents, models, and photographers offers the
-            following services: talent representation, model representation,
+            following services: talent representation
           </p>
         </div>
 
